--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,10 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -29,7 +33,3 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
-
-
-# Ignore mac specific files
-.DS_Store
