--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
-rvm:
-  - 2.6.5
-  - jruby
+
+services:
+ - docker
 
 before_install:
-  - brew services start postgresql
+  - docker-compose up
