--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
-language: ruby
-
 services:
- - docker
+	- docker
 
-before_install:
-  - docker-compose up -d
-  - docker-composes run web rake db:setup
+before_script:
+	- docker-compose build
+	- docker-compose run web db:setup
+	- docker-compose up -d
+
+script:
+	- docker-compose run web bundle exec rake test
+
+after_script:
+	- docker-compose down
