--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ services:
 
 before_script:
     - docker-compose build
-    - docker-compose run web rake db:setup
+    - docker-compose run web rake db:create
+    - docker-compose run web rake db:migrate
     - docker-compose up -d
 
 script:
