--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,4 +5,6 @@ test:
   adapter: async
 
 production:
-  adapter: postgresql
+  adapter: redis
+  url: <%= ENV['REDIS_CABLE_URL'] %>
+  channel_prefix: docker_rails_production
