--- a/config/cable.yml
+++ b/config/cable.yml
@@ -2,9 +2,9 @@ development:
   adapter: async
 
 test:
-  adapter: async
+  adapter: test
 
 production:
   adapter: redis
-  url: <%= ENV['REDIS_CABLE_URL'] %>
-  channel_prefix: docker_rails_production
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: socialrank_production
