--- a/.ebextensions/nginx.config
+++ b/.ebextensions/nginx.config
@@ -22,12 +22,12 @@ files:
           proxy_buffers 8 32k;
           proxy_buffer_size 64k;
 
-          proxy_pass http://backend;
+          proxy_pass http://127.0.0.1:3000;
           proxy_redirect off;
 
           # enables WS support
           location /cable {
-            proxy_pass http://backend;
+            proxy_pass http://127.0.0.1:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade "websocket";
             proxy_set_header Connection "Upgrade";
