--- a/config/cable.yml
+++ b/config/cable.yml
@@ -2,7 +2,9 @@ development:
   adapter: async
 
 test:
-  adapter: async
+  adapter: test
 
 production:
-  adapter: postgresql
+  adapter: async
+  channel_prefix: password_production
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
