--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,6 +5,4 @@ test:
   adapter: test
 
 production:
-  adapter: async
-  channel_prefix: password_production
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  adapter: postgresql
