--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "jquery": "^3.4.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "vis-network": "^6.4.6"
   },
   "version": "0.1.0",
   "devDependencies": {
