--- a/tsung/graph.conf
+++ b/tsung/graph.conf
@@ -26,9 +26,9 @@ legend  = Connected users
 [http]
 title   = HTTP requests per second
 ylabel  = HTTP requests per second
-stats   = 200.count 422.count 302.count 522.count 500.count
-styles  = b- r- y- g- gx
-legend  = http OK, http 422, http 302, http 522, http 500
+stats   = 200.count 422.count 522.count 500.count
+styles  = b- r- y- g-
+legend  = http OK, http 422, http 522, http 500
 yfactor = 10
 
 [size_sent]
